# visualization-3d

./: CMakeLists.txt  README.md  example.py
client-example/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
example-client/: CMakeLists.txt
example-client/src/: Client.cpp  Client.h  main.cpp
server/: CMakeLists.txt
server/src/: CameraController.cpp  CameraController.h  Server.cpp  Server.h  Window.cpp  Window.h  main.cpp
server/src/cam/: Orbit.cpp  Planar.cpp  Planar.h
server/src/camera/: AbstractCamera.cpp  AbstractCamera.h  Orbit.cpp  Orbit.h  Planar.cpp  Planar.h
server/src/objects/: Cuboid.cpp  Cuboid.h  Cylinder.cpp  Cylinder.h  Ground.cpp  Ground.h  Model.cpp  Model.h  Object.cpp  Object.h  Sphere.cpp  Sphere.h
server/src/primitives/: Cuboid.cpp  Cuboid.h  Cylinder.cpp  Cylinder.h  Empty.cpp  Empty.h  Ground.cpp  Ground.h  Model.cpp  Model.h  Sphere.cpp  Sphere.h
server/src/utils/: ArgumentStream.cpp  ArgumentStream.h  Material.cpp  Material.h  Object.cpp  Object.h  Transform.cpp  Transform.h
src/: Server.cpp  Server.h  Window.cpp  Window.h
src/cam/: AbstractCamera.cpp  AbstractCamera.h  Orbit.cpp  Orbit.h
src/primitives/: Cuboid.cpp  Cuboid.h  Cylinder.cpp  Cylinder.h  Empty.cpp  Empty.h  Ground.cpp  Ground.h  Model.cpp  Model.h  Sphere.cpp  Sphere.h
src/utils/: Material.cpp  Material.h  Object.cpp  Object.h  Transform.cpp  Transform.h
